k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: beginner-privacy-api-service

spec:
  selector:
    app: beginner-privacy-api

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
